--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
+
 img {
     box-shadow: 0 0 20px gray;
-    height: 500px;
     border-radius: 7px;
+    height: 500px;
   }
 
   header{
@@ -10,14 +11,63 @@ img {
     color: white;
   }
 
-  #Title{
-    font-size: 20px;
-    font-weight: bold
-
-  }
 
   ul {
     list-style-type: none; /* Remove bullets */
-    padding: 0; /* Remove padding */
-    margin: 0; /* Remove margins */
+     padding: 0;  /*Remove padding */
+     margin: 0;  /*Remove margins */
+     font-size: 14px;
   }
+
+
+  #Title{
+    font-size: 24px;
+    font-style: italic;
+    font-weight: bold;
+  }
+
+  #Artist{
+    font-size: 20px
+  }
+
+  button, input[type=submit]{
+    border-radius: 12px;
+    display: inline-block;
+    padding: 10px 10px;
+    font-size: 16px;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    outline: none;
+    color: #fff;
+    background-color: black;
+    border: none;
+    box-shadow: 0 5px gray;
+  }
+
+  select, input {
+    width: 80%;
+    padding: 4px 4px;
+    border: black;
+    border-radius: 4px;
+    background-color: #f1f1f1;
+  }
+
+#department-label{
+    font-size: 20px;
+    color: black
+  }
+
+
+button:hover, input[type=submit]:hover {background-color: blue}
+
+button:active, input[type=submit]:active {
+  background-color: blue;
+  box-shadow: 0 5px #666;
+  transform: translateY(4px);
+}
+
+.img-container{
+    text-align: center; 
+}
+ 
